--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -1,8 +1,35 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="content-section">
+
+        <!-- Adding the Hive Keychain section  -->
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">{{ title }}</legend>
+            <div class="container p-3">
+                <h2>The Steps:</h2>
+                <li>Install the KeyChain browser extension (<a href="https://chrome.google.com/webstore/detail/hive-keychain/jcacnejopjdphbnjgfaaobbfafkihpep">Chrome</a> or <a href="https://addons.mozilla.org/en-US/firefox/addon/hive-keychain/">Firefox</a>)</li>
+                <li><a href="https://hiveonboard.com/create-account?ref=brianoflondon" target="_blank" rel="noopener noreferrer">Get a Hive Account from HiveOnboard.</a></li>
+                <li>Put your Hive Username in here:</li>
+            </div>
+            <div class="form-group">
+                {{ form.acc_name.label(class="form-control-label") }}
+                {% if form.acc_name.errors %}
+                    {{ form.acc_name(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.acc_name.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.acc_name(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            <button class="btn btn-primary" id="Check Keychain" name="check-keychain" onClick="hiveKeychainSign()">Hive KeyChain Login</button>
+        </fieldset>
+        <!-- Adding the Hive Keychain section  -->
+
         <form method="POST" action="">
-            {{ form.hidden_tag() }}
+        {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Log In</legend>
                 <div class="form-group">
@@ -49,4 +76,40 @@
             Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up Now</a>
         </small>
     </div>
+
+<!-- Hive Keychain javascript part -->
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script>
+function hiveKeychainSign(){
+    let name = document.querySelector("#acc_name").value;
+    console.log(name);
+    const keychain = window.hive_keychain;
+    if (!name) {
+        // need a name
+        console.log('need a name');
+        return
+    }
+    const signedMessageObj = { type: 'login', address: name, page: window.location.href };
+    const messageObj = { signed_message: signedMessageObj, timestamp: parseInt(new Date().getTime() / 1000, 10) };
+    keychain.requestSignBuffer(name, JSON.stringify(messageObj), 'Posting', response => {
+        if (!response.success) { return; }
+            //Successfully logged in
+            console.log(response);
+            //We added stuff here
+            axios.post("/hive/login", response).then((res) => {
+                console.log(res)
+                let data = res.data;
+                //You'd probably want to give the url back in as a json.
+                //Whatever you send back will be save in data. Here' i'm assuming the format
+                //data = {podcaster : "https://google.com"}
+                window.location.href = `${data.loadPage}`;
+            }).catch((err) => {
+                console.log(err);
+                //Deal with any error here
+            })
+        });
+    };
+</script>
+<!-- Hive Keychain javascript part -->
+
 {% endblock content %}
