updated readme.md and add image load

--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+    <p>For more details on this you should look at the Github Link <a href="https://github.com/brianoflondon/python-flask-hive-keychain-demo">Python Flask Hive Keychain Demo on Github</a></p>
     {% for post in posts %}
         <article class="media content-section">
           <div class="media-body">
