--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>{{ current_user.username }}</h1>
+    {{ hb_profile_image(current_user.username, size='300px') }}
 {% endblock content %}
