--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -1,13 +1,18 @@
 {% macro hb_profile_url(acc_name, size='40') -%}
 {% if acc_name == '' %}
-    {{ url_for('static', filename='site_images/unknown.jpg') }}
+    {{ url_for('static', filename='unknown.jpg') }}
 {% else %}
     https://images.hive.blog/u/{{ acc_name }}/avatar?width={{ size }}&height={{ size }}
 {% endif %}
 {%- endmacro %}
 
 {% macro hb_profile_image(acc_name, size='2rem') -%}
+<p>{{ acc_name }}</p>
+{% if acc_name == '' %}
+    <img style="height: {{ size }}; width: {{ size }}" src="{{ url_for('static', filename='unknown.jpg') }}">
+{% else %}
     <img style="height: {{ size }}; width: {{ size }}" src="{{ hb_profile_url(acc_name)|safe }}">
+{% endif %}
 {%- endmacro %}
 
 
@@ -72,8 +77,11 @@
         </div>
         <div class="col-md-4">
           <div class="content-section">
-            <div style="position:;"
-            {{ hb_profile_image(current_user.username, size='80%') }}
+            <div>
+              <div style="margin: auto;">
+                {{ hb_profile_image(current_user.username, size='100%') }}
+              </div>
+            </div>
             <h3>Our Sidebar</h3>
             <p class='text-muted'>You can put any information here you'd like.
               <ul class="list-group">
