working on new drop down method

--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -28,7 +28,7 @@
             </div>
             <button class="btn btn-primary mb-3 p2" id="Check Keychain" name="check-keychain" onClick="hiveKeychainSign()">Hive KeyChain Login</button>
         </fieldset>
-        <div id="match-list"></div>
+        <div id="match-list" class="autocomplete"></div>
         <!-- Adding the Hive Keychain section  -->
 
         <form method="POST" action="">
