Switched to bootstrap JS for 5.3
Signed-off-by: Brian of London (Dot) <brian@v4v.app>

--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -7,7 +7,6 @@ https://images.hive.blog/u/{{ acc_name }}/avatar?width={{ size }}&height={{ size
 {%- endmacro %}
 
 {% macro hb_profile_image(acc_name, size='2rem') -%}
-<p>{{ acc_name }}</p>
 {% if not acc_name %}
 <img style="height: {{ size }}; width: {{ size }}" src="{{ url_for('static', filename='unknown.jpg') }}">
 {% else %}
@@ -25,8 +24,8 @@ https://images.hive.blog/u/{{ acc_name }}/avatar?width={{ size }}&height={{ size
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
@@ -41,13 +40,13 @@ https://images.hive.blog/u/{{ acc_name }}/avatar?width={{ size }}&height={{ size
   <header class="site-header">
     <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
       <div class="container">
-        <a class="navbar-brand mr-4" href="/">Flask Blog</a>
+        <a class="navbar-brand mr-4" href="/">Hive Demo</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
           aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarToggle">
-          <div class="navbar-nav mr-auto">
+          <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
             <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
           </div>
@@ -61,6 +60,14 @@ https://images.hive.blog/u/{{ acc_name }}/avatar?width={{ size }}&height={{ size
             <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
             {% endif %}
           </div>
+          {% if current_user.is_authenticated %}
+          <div class="d-flex flex-row-reverse">
+            <img src={{ hb_profile_url(current_user.username, size='30' ) }} alt="Logo" width="30" height="30"
+              class="d-inline-block align-text-center">
+            <!-- {{ hb_profile_image(current_user.username, size='30') }} -->
+            <!-- src="https://images.hive.blog/u/brianoflondon/avatar?width=30&height=30" -->
+          </div>
+          {% endif %}
         </div>
       </div>
     </nav>
@@ -100,15 +107,10 @@ https://images.hive.blog/u/{{ acc_name }}/avatar?width={{ size }}&height={{ size
     </div>
   </main>
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-    crossorigin="anonymous"></script>
-
+  <!-- Bootstrap JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
